[project]
name = "llmzip"
version = "0.1.0"
description = "Lossless Text Compression using Large Language Models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "LLMzip Contributors" }
]
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.51.0",
    "safetensors",
    "zstandard",
    "fairscale",
    "fire",
    "sentencepiece",
    "pandas",
    "matplotlib",
    "scipy",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = []
